--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "construx-star",
+  "name": "construx-stylus",
   "version": "0.0.1",
-  "description": "star compiler plugin for construx",
+  "description": "stylus compiler plugin for construx",
   "main": "index.js",
   "scripts": {
     "test": "tap test/*.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/krakenjs/construx-star.git"
+    "url": "git+https://github.com/krakenjs/construx-stylus.git"
   },
   "keywords": [
     "krakenjs",
@@ -18,7 +18,7 @@
     "construx",
     "less"
   ],
-  "author": "star",
+  "author": "stylus",
   "license": [
     {
       "type": "Apache 2.0",
@@ -26,12 +26,13 @@
     }
   ],
   "bugs": {
-    "url": "https://github.com/krakenjs/construx-star/issues"
+    "url": "https://github.com/krakenjs/construx-stylus/issues"
   },
-  "homepage": "https://github.com/krakenjs/construx-star#readme",
+  "homepage": "https://github.com/krakenjs/construx-stylus#readme",
   "devDependencies": {
     "jshint": "~2.4.3",
     "nyc": "^2.3.0",
+    "stylus": "^0.51.1",
     "tap": "^1.2.1"
   }
 }
